--- a/styles/style.css
+++ b/styles/style.css
@@ -18,6 +18,28 @@ body {
     margin: auto;
 }
 
+.flex {
+    display: flex;
+}
+
+.btn-contato button {
+    padding: 10px 40px;
+    font-size: 18px;
+    font-weight: 600;
+    color: black;
+    background-color: #FF3131;
+    border: none;
+    border-radius: 30px;
+    cursor: pointer;
+}
+
+.btn-contato button:hover {
+    color: white;
+    box-shadow: 0px 0px 8px #FF3131;
+    transform: scale(1.1);
+    transition: 0.2s;
+}
+
 /* ESTILO HEADER */
 
 header {
@@ -51,16 +73,42 @@ header nav ul li {
     padding: 0 40px;
 }
 
-header .btn-contato button {
-    padding: 10px 40px;
-    font-size: 18px;
-    font-weight: 600;
-    background-color: #00ff08;
-    border: none;
-    border-radius: 30px;
-    cursor: pointer;
+/* ESTILO TOPO SITE */
+section.topo-do-site {
+    padding: 40px 4%;
 }
 
-header .btn-contato button:hover {
-    box-shadow: 0px 0px 8px #00ff08;
+section.topo-do-site .flex {
+    align-items: center;
+    justify-content: center;
+    gap: 90px;
+}
+
+.topo-do-site h1 {
+    color: white;
+    font-size: 42px;
+    line-height: 40px;
+}
+
+.topo-do-site .txt-topo-site h1 span {
+    color: #FF3131;
+}
+
+.topo-do-site .txt-topo-site p {
+    color: white;
+    margin: 40px 0px;
+}
+
+.topo-do-site .img-topo-site img {
+    position: relative;
+    animation: flutuar 2s ease-in-out infinite alternate;
+}
+
+@keyframes flutuar {
+    0%{
+        top: 0;
+    }
+    100%{
+        top: 30px;
+    }
 }
