--- a/styles/style.css
+++ b/styles/style.css
@@ -40,6 +40,16 @@ body {
     transition: 0.2s;
 }
 
+h2.titulo {
+    color: white;
+    font-size: 38px;
+    text-align: center;
+}
+
+h2.titulo span {
+    color: #FF3131;
+}
+
 /* ESTILO HEADER */
 
 header {
@@ -111,4 +121,38 @@ section.topo-do-site .flex {
     100%{
         top: 30px;
     }
+}
+/* ESTILO DAS ESPECIALIDADES */
+
+section.especialidades {
+    padding: 30px 4%;
+}
+
+section.especialidades .flex {
+    display: flex;
+    gap: 60px;
+}
+
+.especialidades .especialidades-box {
+    color: white;
+    margin-top: 45px;
+    padding: 40px;
+    border-radius: 20px;
+    transition: 0.3s;
+}
+
+.especialidades .especialidades-box:hover {
+    transform: scale(1.1);
+    box-shadow: 0 0 20px rgba(255, 255, 255, 0.397);
+}
+
+
+.especialidades .especialidades-box i {
+    font-size: 70px;
+    color: #FF3131;
+}
+
+.especialidades .especialidades-box h3 {
+    font-size: 28px;
+    margin: 15px 0;
 }
