--- a/styles/style.css
+++ b/styles/style.css
@@ -34,7 +34,6 @@ body {
 }
 
 .btn-contato button:hover {
-    color: white;
     box-shadow: 0px 0px 8px #FF3131;
     transform: scale(1.1);
     transition: 0.2s;
@@ -48,6 +47,11 @@ h2.titulo {
 
 h2.titulo span {
     color: #FF3131;
+}
+
+button:hover {
+    box-shadow: 0px 0px 8px #FF3131;
+    transform: scale(1.1);
 }
 
 /* ESTILO HEADER */
@@ -155,4 +159,47 @@ section.especialidades .flex {
 .especialidades .especialidades-box h3 {
     font-size: 28px;
     margin: 15px 0;
+}
+
+/* ESTILO DO SOBRE */
+
+section.sobre {
+    padding: 80px 4%;
+}
+
+section.sobre .flex {
+    align-items: center;
+    gap: 60px;
+}
+
+.sobre .txt-sobre {
+    color: white
+}
+
+.sobre .txt-sobre h2 {
+    font-size: 40px;
+    line-height: 40px;
+    margin-bottom: 32px;
+}
+
+.sobre .txt-sobre h2 span {
+    color: #FF3131;
+    display: block;
+}
+
+.sobre .txt-sobre p {
+    margin: 20px 0;
+    text-align: justify;
+}
+
+.sobre .txt-sobre .btn-social button {
+    width: 60px;
+    height: 60px;
+    border-radius: 50%;
+    border: none;
+    background-color: #FF3131;
+    font-size: 22px;
+    cursor: pointer;
+    margin: 0 5px;
+    transition: 0.2s;
 }
