--- a/styles/style.css
+++ b/styles/style.css
@@ -1,330 +1,426 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
 /* ESTILO GERAL */
 
 * {
-    margin: 0px;
-    padding: 0px;
-    box-sizing: border-box;
-    font-family: "Poppins", sans-serif;
+  margin: 0px;
+  padding: 0px;
+  box-sizing: border-box;
+  font-family: "Poppins", sans-serif;
 }
 
 body {
-    background-color: rgb(0, 0, 0);
-    height: 100vh;
+  background-color: rgb(0, 0, 0);
+  height: 100vh;
 }
 
 .interface {
-    max-width: 1280px;
-    margin: auto;
+  max-width: 1280px;
+  margin: auto;
 }
 
 .flex {
-    display: flex;
+  display: flex;
 }
 
 .btn-contato button {
-    padding: 10px 40px;
-    font-size: 18px;
-    font-weight: 600;
-    color: black;
-    background-color: #FF3131;
-    border: none;
-    border-radius: 30px;
-    cursor: pointer;
+  padding: 10px 40px;
+  font-size: 18px;
+  font-weight: 600;
+  color: black;
+  background-color: #ff3131;
+  border: none;
+  border-radius: 30px;
+  cursor: pointer;
 }
 
 .btn-contato button:hover {
-    box-shadow: 0px 0px 8px #FF3131;
-    transform: scale(1.1);
-    transition: 0.2s;
+  box-shadow: 0px 0px 8px #ff3131;
+  transform: scale(1.1);
+  transition: 0.2s;
 }
 
 h2.titulo {
-    color: white;
-    font-size: 38px;
-    text-align: center;
+  color: white;
+  font-size: 38px;
+  text-align: center;
 }
 
 h2.titulo span {
-    color: #FF3131;
+  color: #ff3131;
 }
 
-button:hover, form .btn-enviar input:hover {
-    box-shadow: 0px 0px 8px #FF3131;
-    transform: scale(1.1);
+button:hover,
+form .btn-enviar input:hover {
+  box-shadow: 0px 0px 8px #ff3131;
+  transform: scale(1.1);
 }
 
 /* ESTILO HEADER */
 
 header {
-    padding: 30px 4%;
+  padding: 30px 4%;
 }
 
 header > .interface {
-    display:flex;
-    align-items: center;
-    justify-content: space-between;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
 }
 
 header a {
-    color: gray;
-    text-decoration: none;
-    display: inline-block;
+  color: gray;
+  text-decoration: none;
+  display: inline-block;
 }
 
 header a:hover {
-    color: white;
-    transform: scale(1.1);
-    transition: 0.2s;
+  color: white;
+  transform: scale(1.1);
+  transition: 0.2s;
 }
 
 header nav ul {
-    list-style-type: none;
+  list-style-type: none;
 }
 
 header nav ul li {
-    display: inline-block;
-    padding: 0 40px;
+  display: inline-block;
+  padding: 0 40px;
 }
 
 /* ESTILO TOPO SITE */
 section.topo-do-site {
-    padding: 40px 4%;
+  padding: 40px 4%;
 }
 
 section.topo-do-site .flex {
-    align-items: center;
-    justify-content: center;
-    gap: 90px;
+  align-items: center;
+  justify-content: center;
+  gap: 90px;
 }
 
 .topo-do-site h1 {
-    color: white;
-    font-size: 42px;
-    line-height: 40px;
+  color: white;
+  font-size: 42px;
+  line-height: 40px;
 }
 
 .topo-do-site .txt-topo-site h1 span {
-    color: #FF3131;
+  color: #ff3131;
 }
 
 .topo-do-site .txt-topo-site p {
-    color: white;
-    margin: 40px 0px;
+  color: white;
+  margin: 40px 0px;
 }
 
 .topo-do-site .img-topo-site img {
-    position: relative;
-    animation: flutuar 2s ease-in-out infinite alternate;
+  position: relative;
+  animation: flutuar 2s ease-in-out infinite alternate;
 }
 
 @keyframes flutuar {
-    0%{
-        top: 0;
-    }
-    100%{
-        top: 30px;
-    }
+  0% {
+    top: 0;
+  }
+  100% {
+    top: 30px;
+  }
 }
 /* ESTILO DAS ESPECIALIDADES */
 
 section.especialidades {
-    padding: 30px 4%;
+  padding: 30px 4%;
 }
 
 section.especialidades .flex {
-    display: flex;
-    gap: 60px;
+  display: flex;
+  gap: 60px;
 }
 
 .especialidades .especialidades-box {
-    color: white;
-    margin-top: 45px;
-    padding: 40px;
-    border-radius: 20px;
-    transition: 0.3s;
+  color: white;
+  margin-top: 45px;
+  padding: 40px;
+  border-radius: 20px;
+  transition: 0.3s;
 }
 
 .especialidades .especialidades-box:hover {
-    transform: scale(1.1);
-    box-shadow: 0 0 20px rgba(255, 255, 255, 0.397);
+  transform: scale(1.1);
+  box-shadow: 0 0 20px rgba(255, 255, 255, 0.397);
 }
 
-
 .especialidades .especialidades-box i {
-    font-size: 70px;
-    color: #FF3131;
+  font-size: 70px;
+  color: #ff3131;
 }
 
 .especialidades .especialidades-box h3 {
-    font-size: 28px;
-    margin: 15px 0;
+  font-size: 28px;
+  margin: 15px 0;
 }
 
 /* ESTILO DO SOBRE */
 
 section.sobre {
-    padding: 80px 4%;
+  padding: 80px 4%;
 }
 
 section.sobre .flex {
-    align-items: center;
-    gap: 60px;
+  align-items: center;
+  gap: 60px;
 }
 
 .sobre .txt-sobre {
-    color: white
+  color: white;
 }
 
 .sobre .txt-sobre h2 {
-    font-size: 40px;
-    line-height: 40px;
-    margin-bottom: 32px;
+  font-size: 40px;
+  line-height: 40px;
+  margin-bottom: 32px;
 }
 
 .sobre .txt-sobre h2 span {
-    color: #FF3131;
-    display: block;
+  color: #ff3131;
+  display: block;
 }
 
 .sobre .txt-sobre p {
-    margin: 20px 0;
-    text-align: justify;
+  margin: 20px 0;
+  text-align: justify;
 }
 
 .btn-social button {
-    width: 60px;
-    height: 60px;
-    border-radius: 50%;
-    border: none;
-    background-color: #FF3131;
-    font-size: 22px;
-    cursor: pointer;
-    margin: 0 5px;
-    transition: 0.2s;
+  width: 60px;
+  height: 60px;
+  border-radius: 50%;
+  border: none;
+  background-color: #ff3131;
+  font-size: 22px;
+  cursor: pointer;
+  margin: 0 5px;
+  transition: 0.2s;
 }
 
 /* ESTILO PORTIFOLIO */
 
 section.portifolio {
-    padding: 80px 4%;
-    box-shadow: 0 0 40px 10px rgba(255, 255, 255, 0.142);
+  padding: 80px 4%;
+  box-shadow: 0 0 40px 10px rgba(255, 255, 255, 0.142);
 }
 
 section.portifolio .flex {
-    display: flex;
-    justify-content: space-around;
-    margin-top: 60px;
+  display: flex;
+  justify-content: space-around;
+  margin-top: 60px;
 }
 
 .img-port {
-    width: 360px;
-    height: 460px;
-    background-size: cover;
-    background-position: 100% 0%;
-    transition: 8s;
-    cursor: pointer;
-    border-radius: 40px;
-    position: relative;
+  width: 360px;
+  height: 460px;
+  background-size: cover;
+  background-position: 100% 0%;
+  transition: 8s;
+  cursor: pointer;
+  border-radius: 40px;
+  position: relative;
 }
 
 .img-port:hover {
-    background-position: 100% 100%;
+  background-position: 100% 100%;
 }
 
 .overlay {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: #00000080;
-    border-radius: 40px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    font-size: 24px;
-    font-weight: 600;
-    color: white;
-    opacity: 0;
-    transition: 0.5s;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: #00000080;
+  border-radius: 40px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 24px;
+  font-weight: 600;
+  color: white;
+  opacity: 0;
+  transition: 0.5s;
 }
 
 .overlay:hover {
-    opacity: 1;
+  opacity: 1;
 }
 
 /* ESTILO DO FORMULARIO */
 
 section.formulario {
-    padding:80px 4%;
+  padding: 80px 4%;
 }
 
 form {
-    max-width: 500px;
-    margin: 0 auto;
-    display: flex;
-    justify-content: center;
-    flex-direction: column;
-    gap: 10px;
-    margin-top: 40px;
+  max-width: 500px;
+  margin: 0 auto;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  gap: 10px;
+  margin-top: 40px;
 }
 
-form input, form textarea {
-    width: 100%;
-    background-color: rgb(58, 57, 57);
-    border: 0;
-    outline: 0;
-    padding: 20px 15px;
-    border-radius: 15px;
-    color: white;
-    font-size: 18px;
+form input,
+form textarea {
+  width: 100%;
+  background-color: rgb(58, 57, 57);
+  border: 0;
+  outline: 0;
+  padding: 20px 15px;
+  border-radius: 15px;
+  color: white;
+  font-size: 18px;
 }
 
 form textarea {
-    resize: none;
-    height: 150px;
+  resize: none;
+  height: 150px;
 }
 
 form .btn-enviar {
-    margin-top: 20px;
-    text-align: center;
+  margin-top: 20px;
+  text-align: center;
 }
 
 form .btn-enviar input {
-    width: 150px;
-    background-color: #FF3131;
-    color: black;
-    font-weight: 700;
-    cursor: pointer;
-    transition: 0.2s;
+  width: 150px;
+  background-color: #ff3131;
+  color: black;
+  font-weight: 700;
+  cursor: pointer;
+  transition: 0.2s;
 }
 
 /* ESTILO RODAPÉ */
 
 footer {
-    padding: 40px 4%;
-    box-shadow: 0 0 40px 10px rgba(255, 255, 255, 0.142)
+  padding: 40px 4%;
+  box-shadow: 0 0 40px 10px rgba(255, 255, 255, 0.142);
 }
 
 footer .flex {
-    justify-content: space-between;
+  justify-content: space-between;
 }
 
 footer .line-footer {
-    padding: 20px 0;
+  padding: 20px 0;
 }
 
 .borda {
-    border-top: 2px solid #FF3131;
+  border-top: 2px solid #ff3131;
 }
 
 footer .line-footer p i {
-    color: #FF3131;
-    font-size: 22px;
+  color: #ff3131;
+  font-size: 22px;
 }
 
 footer .line-footer p a {
-    color: white;
-    text-decoration: none;
+  color: white;
+  text-decoration: none;
+}
+
+@media screen and (max-width: 1040px) {
+  /* CLASS GERAIS */
+
+  .flex {
+    flex-direction: column-reverse;
+  }
+
+  h2.titulo {
+    font-size: 34px;
+    line-height: 30px;
+  }
+
+  /* CABEÇALHO RESPONSIVO */
+
+  .menu-desktop,
+  .btn-contato {
+    display: none;
+  }
+
+  /* TOPO DO SITE */
+
+  section.topo-do-site .flex {
+    gap: 40px;
+  }
+
+  section.topo-do-site {
+    padding: 20px 8%;
+  }
+
+  .topo-do-site h1 {
+    font-size: 30px;
+  }
+
+  .topo-do-site .img-topo-site img {
+    width: 100%;
+  }
+
+  .txt-topo-site h1,
+  p {
+    text-align: center;
+  }
+
+  /* ESPECIALIDADES */
+
+  section.especialidades {
+    padding: 40px 8%;
+  }
+
+  /* SOBRE */
+
+  section.sobre {
+    padding: 80px 8%;
+  }
+
+  .sobre .txt-sobre h2 {
+    font-size: 32px;
+    line-height: 35px;
+    text-align: center;
+  }
+
+  .btn-social {
+    text-align: center;
+  }
+
+  .img-sobre img {
+    width: 100%;
+  }
+
+  /* PORTIFOLIO */
+
+  section.portifolio {
+    padding: 80px 8%;
+  }
+
+  .img-port {
+    width: 100%;
+    max-width: 360px;
+    margin: 0 auto;
+  }
+
+  section.portifolio .flex {
+    gap: 60px;
+  }
+
+  /* RODAPÉ */
+
+  footer .flex {
+    flex-direction: column;
+  }
+
+  footer .line-footer {
+    text-align: center;
+  }
 }
