--- a/styles/style.css
+++ b/styles/style.css
@@ -1,21 +1,19 @@
-@import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
 /* ESTILO GERAL */
-
 * {
-  margin: 0px;
-  padding: 0px;
+  margin: 0;
+  padding: 0;
   box-sizing: border-box;
-  font-family: "Poppins", sans-serif;
+  font-family: 'Poppins', sans-serif;
 }
 
 body {
-  background-color: rgb(0, 0, 0);
+  background-color: #000;
   height: 100vh;
 }
 
 .interface {
   max-width: 1280px;
-  margin: auto;
+  margin: 0 auto;
 }
 
 .flex {
@@ -26,69 +24,131 @@ body {
   padding: 10px 40px;
   font-size: 18px;
   font-weight: 600;
-  color: black;
-  background-color: #ff3131;
-  border: none;
+  background-color: #FF3131;
+  border: 0;
   border-radius: 30px;
   cursor: pointer;
-}
-
-.btn-contato button:hover {
-  box-shadow: 0px 0px 8px #ff3131;
-  transform: scale(1.1);
-  transition: 0.2s;
+  transition: .2s;
 }
 
 h2.titulo {
-  color: white;
+  color: #fff;
   font-size: 38px;
   text-align: center;
 }
 
 h2.titulo span {
-  color: #ff3131;
+  color: #FF3131;
 }
 
 button:hover,
 form .btn-enviar input:hover {
-  box-shadow: 0px 0px 8px #ff3131;
-  transform: scale(1.1);
+  box-shadow: 0px 0px 8px #FF3131;
+  transform: scale(1.05);
 }
 
-/* ESTILO HEADER */
-
+/* ESTILO DO CABEÇALHO */
 header {
-  padding: 30px 4%;
+  padding: 40px 4%;
 }
 
-header > .interface {
+header>.interface {
   display: flex;
   align-items: center;
   justify-content: space-between;
 }
 
 header a {
-  color: gray;
+  color: #5c5c5c;
   text-decoration: none;
   display: inline-block;
+  transition: .2s;
 }
 
-header a:hover {
-  color: white;
-  transform: scale(1.1);
-  transition: 0.2s;
+header nav.menu-desktop a:hover {
+  color: #fff;
+  transform: scale(1.05);
 }
 
 header nav ul {
   list-style-type: none;
 }
 
-header nav ul li {
+header nav.menu-desktop ul li {
   display: inline-block;
   padding: 0 40px;
 }
 
-/* ESTILO TOPO SITE */
+/* ESTILO DO MENU MOBILE */
+
+.btn-abrir-menu{
+  display: none;
+}
+
+.btn-abrir-menu i{
+  color: #FF3131;
+  font-size: 40px;
+}
+
+.menu-mobile{
+  background-color: #000;
+  height: 100vh;
+  position: fixed;
+  top: 0;
+  right: 0;
+  z-index: 99999;
+  width: 0%;
+  overflow: hidden;
+  transition: .5s;
+}
+
+.menu-mobile.abrir-menu{
+  width: 70%;
+}
+
+.menu-mobile.abrir-menu ~ .overlay-menu{
+  display: block;
+}
+
+
+.menu-mobile .btn-fechar{
+  padding: 20px 5%;
+}
+
+.menu-mobile .btn-fechar i{
+  color: #FF3131;
+  font-size: 30px;
+}
+
+.menu-mobile nav ul{
+  text-align: right;
+}
+
+.menu-mobile nav ul li a{
+  color: #fff;
+  font-size: 20px;
+  font-weight: 300;
+  padding: 20px 8%;
+  display: block;
+}   
+
+.menu-mobile nav ul li a:hover{
+  background-color: #FF3131;
+  color: #000;
+}
+
+.overlay-menu{
+  background-color: #000000df;
+  width: 100%;
+  height: 100%;
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 88888;
+  display: none;
+}
+
+/* ESTILO DO TOPO DO SITE */
 section.topo-do-site {
   padding: 40px 4%;
 }
@@ -100,18 +160,18 @@ section.topo-do-site .flex {
 }
 
 .topo-do-site h1 {
-  color: white;
+  color: #fff;
   font-size: 42px;
   line-height: 40px;
 }
 
 .topo-do-site .txt-topo-site h1 span {
-  color: #ff3131;
+  color: #FF3131;
 }
 
 .topo-do-site .txt-topo-site p {
-  color: white;
-  margin: 40px 0px;
+  color: #fff;
+  margin: 40px 0;
 }
 
 .topo-do-site .img-topo-site img {
@@ -119,50 +179,50 @@ section.topo-do-site .flex {
   animation: flutuar 2s ease-in-out infinite alternate;
 }
 
+
 @keyframes flutuar {
   0% {
-    top: 0;
+      top: 0;
   }
+
   100% {
-    top: 30px;
+      top: 30px;
   }
 }
-/* ESTILO DAS ESPECIALIDADES */
 
-section.especialidades {
-  padding: 30px 4%;
+/* ESTILO DAS ESPECIALIDADES */
+section.especiliadades {
+  padding: 40px 4%;
 }
 
-section.especialidades .flex {
-  display: flex;
+section.especiliadades .flex {
   gap: 60px;
 }
 
-.especialidades .especialidades-box {
-  color: white;
-  margin-top: 45px;
+.especiliadades .especialidades-box {
+  color: #fff;
   padding: 40px;
   border-radius: 20px;
-  transition: 0.3s;
+  margin-top: 45px;
+  transition: .2s;
 }
 
-.especialidades .especialidades-box:hover {
-  transform: scale(1.1);
-  box-shadow: 0 0 20px rgba(255, 255, 255, 0.397);
+.especiliadades .especialidades-box:hover {
+  transform: scale(1.05);
+  box-shadow: 0 0 20px #ffffff78;
 }
 
-.especialidades .especialidades-box i {
+.especiliadades .especialidades-box i {
   font-size: 70px;
-  color: #ff3131;
+  color: #FF3131;
 }
 
-.especialidades .especialidades-box h3 {
+.especiliadades .especialidades-box h3 {
   font-size: 28px;
   margin: 15px 0;
 }
 
 /* ESTILO DO SOBRE */
-
 section.sobre {
   padding: 80px 4%;
 }
@@ -173,17 +233,17 @@ section.sobre .flex {
 }
 
 .sobre .txt-sobre {
-  color: white;
+  color: #fff;
 }
 
 .sobre .txt-sobre h2 {
   font-size: 40px;
   line-height: 40px;
-  margin-bottom: 32px;
+  margin-bottom: 30px;
 }
 
 .sobre .txt-sobre h2 span {
-  color: #ff3131;
+  color: #FF3131;
   display: block;
 }
 
@@ -197,22 +257,20 @@ section.sobre .flex {
   height: 60px;
   border-radius: 50%;
   border: none;
-  background-color: #ff3131;
+  background-color: #FF3131;
   font-size: 22px;
   cursor: pointer;
   margin: 0 5px;
-  transition: 0.2s;
+  transition: .2s;
 }
 
-/* ESTILO PORTIFOLIO */
-
-section.portifolio {
+/* ESTILO DO PORTFÓLIO */
+section.portfolio {
   padding: 80px 4%;
-  box-shadow: 0 0 40px 10px rgba(255, 255, 255, 0.142);
+  box-shadow: 0 0 40px 10px #ffffff1d;
 }
 
-section.portifolio .flex {
-  display: flex;
+section.portfolio .flex {
   justify-content: space-around;
   margin-top: 60px;
 }
@@ -238,24 +296,23 @@ section.portifolio .flex {
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: #00000080;
+  background-color: #000000b8;
   border-radius: 40px;
   display: flex;
   align-items: center;
   justify-content: center;
   font-size: 24px;
   font-weight: 600;
-  color: white;
+  color: #fff;
   opacity: 0;
-  transition: 0.5s;
+  transition: .5s;
 }
 
 .overlay:hover {
   opacity: 1;
 }
 
-/* ESTILO DO FORMULARIO */
-
+/* ESTILO DO FORMULÁRIO DE CONTATO */
 section.formulario {
   padding: 80px 4%;
 }
@@ -273,18 +330,18 @@ form {
 form input,
 form textarea {
   width: 100%;
-  background-color: rgb(58, 57, 57);
+  background-color: #242424;
   border: 0;
   outline: 0;
   padding: 20px 15px;
   border-radius: 15px;
-  color: white;
+  color: #fff;
   font-size: 18px;
 }
 
 form textarea {
   resize: none;
-  height: 150px;
+  max-height: 200px;
 }
 
 form .btn-enviar {
@@ -293,19 +350,19 @@ form .btn-enviar {
 }
 
 form .btn-enviar input {
-  width: 150px;
-  background-color: #ff3131;
-  color: black;
+  width: 120px;
+  background-color: #FF3131;
+  color: #000;
   font-weight: 700;
   cursor: pointer;
-  transition: 0.2s;
+  transition: .2s;
 }
 
-/* ESTILO RODAPÉ */
+/* ESTILO DO RODAPÉ */
 
 footer {
   padding: 40px 4%;
-  box-shadow: 0 0 40px 10px rgba(255, 255, 255, 0.142);
+  box-shadow: 0 0 40px 10px #ffffff1d;
 }
 
 footer .flex {
@@ -317,110 +374,104 @@ footer .line-footer {
 }
 
 .borda {
-  border-top: 2px solid #ff3131;
+  border-top: 2px solid #FF3131;
 }
 
 footer .line-footer p i {
-  color: #ff3131;
+  color: #FF3131;
   font-size: 22px;
 }
 
 footer .line-footer p a {
-  color: white;
-  text-decoration: none;
+  color: #fff;
 }
 
-@media screen and (max-width: 1040px) {
-  /* CLASS GERAIS */
+@media screen and (max-width: 1020px) {
 
+  /* CLASSES GERAIS */
   .flex {
-    flex-direction: column-reverse;
+      flex-direction: column;
+  }
+
+  .topo-do-site .flex{
+      flex-direction: column-reverse;
   }
 
   h2.titulo {
-    font-size: 34px;
-    line-height: 30px;
+      font-size: 34px;
+      line-height: 30px;
   }
 
-  /* CABEÇALHO RESPONSIVO */
-
+  /* CABEÇALHO */
   .menu-desktop,
   .btn-contato {
-    display: none;
+      display: none;
   }
 
   /* TOPO DO SITE */
 
   section.topo-do-site .flex {
-    gap: 40px;
+      gap: 40px;
   }
 
   section.topo-do-site {
-    padding: 20px 8%;
+      padding: 20px 8%;
   }
 
   .topo-do-site h1 {
-    font-size: 30px;
+      font-size: 30px;
   }
 
   .topo-do-site .img-topo-site img {
-    width: 100%;
-  }
-
-  .txt-topo-site h1,
-  p {
-    text-align: center;
+      width: 100%;
   }
 
   /* ESPECIALIDADES */
-
-  section.especialidades {
-    padding: 40px 8%;
+  section.especiliadades {
+      padding: 40px 8%;
   }
 
   /* SOBRE */
-
   section.sobre {
-    padding: 80px 8%;
+      padding: 80px 8%;
   }
 
   .sobre .txt-sobre h2 {
-    font-size: 32px;
-    line-height: 35px;
-    text-align: center;
+      font-size: 34px;
+      line-height: 35px;
+      text-align: center;
+  }
+  
+  .btn-social{
+      text-align: center;
   }
 
-  .btn-social {
-    text-align: center;
+  .img-sobre img{
+      width: 100%;
   }
 
-  .img-sobre img {
-    width: 100%;
-  }
-
-  /* PORTIFOLIO */
-
-  section.portifolio {
-    padding: 80px 8%;
+  /* PORTFÓLIO */
+  section.portfolio {
+      padding: 80px 8%;
   }
 
   .img-port {
-    width: 100%;
-    max-width: 360px;
-    margin: 0 auto;
+      width: 100%;
+      max-width: 360px;
+      margin: 0 auto;
   }
-
-  section.portifolio .flex {
-    gap: 60px;
+  
+  section.portfolio .flex {
+     gap: 60px;
   }
 
   /* RODAPÉ */
-
   footer .flex {
-    flex-direction: column;
+      flex-direction: column;
+      gap: 30px;
   }
 
   footer .line-footer {
-    text-align: center;
+      text-align: center;
   }
 }
